# BergermeisterHome

./: .gitignore  BergermeisterHome.sln  CMakeLists.txt  README.md
Common/: Common.vcxproj  Common.vcxproj.filters
Common/Source/: CRC32.h  Constants.h  Export.h  StopWatch.cpp  StopWatch.h  TargetVersion.h  Types.h  pch.h
Documentation/: Doxyfile  Generate.bat
Documentation/Input/: Doxyfile  MakeTex.bat  header.tex
Documentation/html/: _alert_8cpp_source.html  _alert_8h.html  _alert_8h__dep__incl.map  _alert_8h__dep__incl.md5  _alert_8h_source.html  _app_8g_8hpp_source.html  _c_r_c32_8cpp_source.html  _c_r_c32_8h.html  _c_r_c32_8h_source.html  _common_2_source_2_drivers-bak_2_d_h_t_sensor_8cpp_source.html  _common_2_source_2_drivers-bak_2_d_h_t_sensor_8h_source.html  _common_2_source_2pch_8cpp_source.html  _common_2_source_2pch_8h_source.html  _component_id_8h.html  _component_id_8h_source.html  _console_2_app_8xaml_8cpp_source.html  _console_2_app_8xaml_8h_source.html  _console_2_d_h_t_sensor_8cpp_source.html  _console_2_d_h_t_sensor_8h_source.html  _console_2_generated_01_files_2_app_8g_8h_source.html  _console_2_generated_01_files_2_main_page_8g_8h_source.html  _console_2_generated_01_files_2_xaml_binding_info_8g_8h_source.html  _console_2_generated_01_files_2_xaml_binding_info_8g_8hpp_source.html  _console_2_generated_01_files_2_xaml_lib_metadata_provider_8g_8cpp_source.html  _console_2_generated_01_files_2_xaml_type_info_8_impl_8g_8cpp_source.html  _console_2_generated_01_files_2_xaml_type_info_8g_8h_source.html  _console_2_main_page_8xaml_8cpp_source.html  _console_2_main_page_8xaml_8h_source.html  _console_2pch_8cpp_source.html  _console_2pch_8h_source.html  _constants_8h_source.html  _criticality_8h.html  _criticality_8h.js  _criticality_8h_source.html  _event_8h_source.html  _event_id_8h.html  _event_id_8h_source.html  _export_8h_source.html  _group_id_8h.html  _group_id_8h_source.html  (+313 more)
Documentation/latex/: _alert_8cpp_source.tex  _alert_8h.tex  _alert_8h__dep__incl.md5  _alert_8h_source.tex  _c_r_c32_8cpp_source.tex  _c_r_c32_8h.tex  _c_r_c32_8h_source.tex  _component_id_8h.tex  _component_id_8h_source.tex  _constants_8h_source.tex  _criticality_8h.tex  _criticality_8h_source.tex  _event_8h_source.tex  _event_id_8h.tex  _event_id_8h_source.tex  _export_8h_source.tex  _group_id_8h.tex  _group_id_8h_source.tex  _identifier_8cpp.tex  _identifier_8cpp_source.tex  _identifier_8h.tex  _identifier_8h_source.tex  _linked_list_8h_source.tex  _list_8h_source.tex  _list_node_8h_source.tex  _listener_8cpp_source.tex  _listener_8h_source.tex  _model_8cpp_source.tex  _model_8h_source.tex  _queue_8h_source.tex  _status_8cpp.tex  _status_8cpp_source.tex  _status_8h.tex  _status_8h_source.tex  _stop_watch_8cpp_source.tex  _stop_watch_8h.tex  _stop_watch_8h_source.tex  _target_version_8h.tex  _target_version_8h_source.tex  _types_8h.tex  (+94 more)
Documentation/xml/: _alert_8cpp.xml  _alert_8h.xml  _app_8g_8hpp.xml  _common_2_source_2_drivers-bak_2_d_h_t_sensor_8cpp.xml  _common_2_source_2_drivers-bak_2_d_h_t_sensor_8h.xml  _common_2_source_2pch_8cpp.xml  _common_2_source_2pch_8h.xml  _console_2_app_8xaml_8cpp.xml  _console_2_app_8xaml_8h.xml  _console_2_d_h_t_sensor_8cpp.xml  _console_2_d_h_t_sensor_8h.xml  _console_2_generated_01_files_2_app_8g_8h.xml  (+115 more)
EthernetDriver/: EthernetDriver.vcxproj  EthernetDriver.vcxproj.filters
Framework/: CMakeLists.txt
Framework/doc/coverage/: bdf  bdf.build__deps_googletest-src_googletest_include_gtest_gtest-assertion-result.h.html  bdf.build__deps_googletest-src_googletest_include_gtest_gtest-printers.h.html  bdf.build__deps_googletest-src_googletest_include_gtest_gtest.h.html  bdf.build__deps_googletest-src_googletest_include_gtest_internal_gtest-internal.h.html  bdf.build__deps_googletest-src_googletest_include_gtest_internal_gtest-port.h.html  bdf.src_BDF_Network_IPEndpoint.cpp.html  bdf.src_BDF_Network_IPEndpoint.h.html  bdf.src_BDF_Network_UDPClient.cpp.html  bdf.src_BDF_Network_UDPClient.h.html  bdf.src_BDF_Network_UDPSocket.cpp.html  bdf.src_BDF_Network_UDPSocket.h.html  bdf.src_BDF_Sensor_DHT22.cpp.html  bdf.src_BDF_Sensor_DHT22.h.html  bdf.src_BDF_Time_StopWatch.cpp.html  bdf.tst_BDF_Network_UDP.cpp.html  bdf.tst_BDF_Sensor_DHT22.cpp.html
Framework/src/BDF/: CMakeLists.txt  Environment.h
Framework/src/BDF/Network/: CMakeLists.txt  IPEndpoint.cpp  IPEndpoint.h  UDPClient.cpp  UDPClient.h  UDPSocket.cpp  UDPSocket.h
Framework/src/BDF/Sensor/: CMakeLists.txt  DHT22.cpp  DHT22.h
Framework/src/BDF/Time/: CMakeLists.txt  StopWatch.cpp  StopWatch.h
Framework/tst/: CMakeLists.txt
Framework/tst/BDF/: CMakeLists.txt
Framework/tst/BDF/Network/: CMakeLists.txt  UDP.cpp
Framework/tst/BDF/Sensor/: CMakeLists.txt  DHT22.cpp
HVACDriver/: HVACDriver.vcxproj  HVACDriver.vcxproj.filters
Home/: Home.sln
Hub/: CMakeLists.txt
Hub/src/Hub/: Main.cpp
Network/: CMakeLists.txt  Config.cmake.in  README.md
Network/dev/gpp/: makefile
Network/lib/: Installing.cmake
Network/src/Network/: IPEndpoint.cpp  IPEndpoint.h  UDPClient.cpp  UDPClient.h  UDPSocket.cpp  UDPSocket.h  Version.h.in
Sensor/: CMakeLists.txt  README.md
Sensor/src/Sensor/: DHT22.cpp  DHT22.h  Main.cpp  UDPClient.cpp  UDPClient.h
Thermostat/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  Thermostat.vcxproj  Thermostat.vcxproj.filters  pch.h
(+546 files in other folders)
